<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BSGDemo</string>
    <string name="title_section3">Section 3</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section1">Section 1</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="new_route_button">Маршрут</string>
    <string name="search_button">Поиск</string>
    <string name="popular_button">Популярное</string>
    <string name="near_places_button">Места рядом</string>
    <string name="my_profile_button">Профиль</string>
    <string name="audio_guide_button">Аудио гид</string>
    <string name="secrets_button">Секреты</string>
    <string name="routes_button">Маршруты</string>
    <string name="history_button">История</string>
    <string name="gallery_button">Галерея</string>
    <string name="information_button">Информация</string>
    <string name="audioguides_list_button">Список гидов</string>
    <string name="my_routes_button">Мои маршруты</string>
    <string name="visited">Посещено</string>
    <string name="liked">Понравилось</string>
    <string name="want_to_visit">Хочу посетить</string>
    <string name="my_profile_title">Мой профиль</string>
    <string name="near_places">Места поблизости</string>
    <string name="place_description">Short description goes here. It limited by only two lines.</string>
    <string name="information_button_text">Информация</string>
    <string name="gallery_button_text">Галерея</string>
    <string name="history_button_text">История</string>
    <string name="routes_button_text">Маршруты</string>
    <string name="secrets_button_text">Секреты</string>
    <string name="guides_button_text">Аудио гид</string>
    <string name="guide_list">Список аудиогидов</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="stop">Stop</string>
    <string name="info">Info</string>
    <string name="text">Text</string>
    <string name="back_button">backButton</string>
    <string name="previousButton">previousButton</string>
    <string name="nextButton">nextButton</string>
    <string name="gallery_item_image">gallery item image</string>
    <string name="share_button">share button</string>
    <string name="action_button">button for actions with guide</string>
    <string name="play_button">play audio</string>
    <string name="place_icon">place icon</string>
    <string name="picture">picture</string>
    <string name="image">image</string>
    <string name="pin">pin</string>
    <string name="minsk">Минск</string>
    <string name="number">25</string>
    <string name="distance">5-10km</string>
    <string name="qr_button">QR button</string>
    <string name="top_switcher_grid">top switcher grid</string>
    <string name="top_switcher_list">top switcher list</string>
    <string name="top_switcher_map">top switcher map</string>
    <string name="add_button">add button</string>
    <string name="new_route">Новый маршрут</string>
    <string name="place_image">place image</string>
    <string name="settings_button">settings button</string>
    <string name="recommended">Мне рекомендуют:</string>

</resources>